# bwf_forms

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml
bwf_forms/: admin.py  api.py  apps.py  asgi.py  manage.py  models.py  serializers.py  settings_forms.py  urls.py  utils.py  views.py
bwf_forms/bwf_forms/frontend/form_builder/: README.md  package-lock.json  package.json  webpack.config.js
bwf_forms/bwf_forms/frontend/form_builder/configuration/: environment.js
bwf_forms/bwf_forms/frontend/form_builder/src/controls/layout/: dropable-control.js
bwf_forms/bwf_forms/frontend/form_builder/src/controls/utils/: constants.js
bwf_forms/bwf_forms/frontend/form_builder/src/js/: dev.js  fb-build-area.js  form-builder.js  layout.js  viewer-layout.js
bwf_forms/bwf_forms/frontend/form_builder/src/views/builder/: container.handlebars
bwf_forms/migrations/: 0001_initial.py
bwf_forms/static/form_builder/js/: form-builder.js
bwf_forms/static/pages/js/: bwf_form.js  forms_dashboard.js  forms_editor.js
bwf_forms/templates/bwf_forms/: editor.html  form_builder.html  form_detail.html  form_edition.html  form_history.html  main.html
bwf_forms/templates/govapp/: base.html  form_render_block.html
bwf_forms/templates/modals/: new_form_modal.html
